--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/jpg" href="./src/assets/matag_logo.png"/>
     <title>Mate Amargo Camisetas</title>
   </head>
   <body>
